--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -222,6 +222,6 @@ section {
     margin-bottom: 15px;
     word-spacing: 2px;
     font-weight: 500;
-    line-height: 3;
+    line-height: 2;
   }
 }
